tests/test_variable_state/bad/self_reference_first_state.catala_en
## Test

```catala
declaration scope A:
  output foo content integer
    state bar
    state baz

scope A:
  definition foo state bar equals foo + 1

  definition foo state baz equals foo + 1
```

```catala-test {id="Typecheck"}
catala Typecheck 
```
